HelpMePlay | 1.0.2
	New:
		- Players can now hold any modifier key to prevent the automated selection of Threads of Fate.
		- Added a dialog option for Thaelin Darkanvil during the Tanaan Jungle invasion scenario.
		- Added a dialog option for Tyrande Whisperwind in Val'sharah (Alliance).
		- Automated the confirmation for Khadgar in the Blasted Lands.
	Changes:
		- Only players below level 50 are now considered eligible for War Mode automation.
		- Generalized the dialog for the Broken Shore skip. Now both factions will skip onward to new Dalaran.
	Fixes:
		- Tanaan Jungle is now more reliably selected from the Hero's Call Board for the Alliance.
		- Fixed an issue where Alliance players weren't reliably opted in to War Mode.
		- Fixed an issue where Alliance players were opted out of War Mode automatically.